style: prevent celebrant image cropping by using object-fit contain

--- a/style.css
+++ b/style.css
@@ -652,7 +652,7 @@ section {
 .about-img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   display: block;
 }
 
@@ -1113,7 +1113,7 @@ section {
 .gallery-img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   position: absolute;
   top: 0;
   left: 0;
